2009-04-03 0.64 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Skip perlio tests for perl older than 5.8, as perlio
	  was experimental in 5.6
	* Up Devel::PPPort to 3.17
	* Fix initialisation of eol => undef (could cause core dump)
	* Added configure_require to META.yml

2009-03-20 0.63 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Fixed allow_whitespace with sep_char = TAB (RT#44402)

2009-03-13 0.62 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Prevent warnings in older perls (without utf8)
	* All known errors are covered and/or documented. TODO dropped
	* Unicode TODO dropped. All covered, or use Text::CSV::Encoded
	* Documented the examples

2009-03-08 0.61 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* valgrind found a possible uninitialized value
	* Restriction in print () was only for really old perls
	* Fix for bind_columns () initialisation (vincent, RT#43927)

2009-01-27 0.60 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Optimize for threaded perls. (Goro Fuji, RT#42517)
	  Non-threaded perls won't notice

2009-01-23 0.59 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Wrong e-mail in META.yml
	* Missing $IO argument in bind_columns example (docs only)
	* Upped Copyright notices to 2009
	* Added warning for parse () (RT#42261)
	* Small optimisations (Goro Fuji, RT#42517)
	* ppport.h updated to 3.15
	* Added git clone command to README
	* ppport.h updated to 3.16-pre
	* Optimize getline/print method calls (Goro Fuji, RT#42517)
	* Decode *_char attributes for perl 5.8.2 and up

2008-10-30 0.58 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Small typo in test message (RT#40410, JPL)
	* Parse error test on "\0 (RT#40507)
	* Fixed allow_loose_escapes bug disclosed by RT#40507

2008-10-21 0.57 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Don't bootstrap twice. Don't know how/when it came in there

2008-10-21 0.56 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Update to ppport.h 3.14_01
	* Updated docs (Unicode, TODO, Release Plan)