@@ -6,15 +6,19 @@
 use strict;
 use warnings;
 
-our $VERSION = "1.2";
+use Data::Peek;
+use Encode qw( decode );
+
+our $VERSION = "1.3";	# 2009-04-09
 
 sub usage
 {
     my $err = shift and select STDERR;
     print <<EOU;
-usage: csv-check [-s <sep>] [-q <quot>] [file.csv]
+usage: csv-check [-s <sep>] [-q <quot>] [-u] [file.csv]
        -s <sep>   use <sep>   as seperator char. Auto-detect, default = ','
        -q <quot>  use <quot>  as quotation char. Default = '"'
+       -u         check if all fields are valid unicode
 EOU
     exit $err;
     } # usage
@@ -22,12 +26,13 @@ EOU
 use Getopt::Long qw(:config bundling nopermute passthrough);
 my $sep;	# Set after reading first line in a flurry attempt to auto-detect
 my $quo = '"';
-
+my $opt_u = 0;
 GetOptions (
     "help|?"	=> sub { usage (0); },
 
     "c|s=s"	=> \$sep,
     "q=s"	=> \$quo,
+    "u"		=> \$opt_u,
     ) or usage (1);
 
 use Text::CSV_XS;
@@ -64,7 +69,9 @@ my $csv = Text::CSV_XS-> new ({
 
 sub done
 {
-    print "Checked with $0 $VERSION using Text::CSV_XS $Text::CSV_XS::VERSION\n";
+    (my $file = $ARGV // "") =~ s{(\S)$}{$1 };
+    (my $prog = $0) =~ s{.*/}{};
+    print "Checked $file with $prog $VERSION using Text::CSV_XS $Text::CSV_XS::VERSION\n";
     my @diag = $csv->error_diag;
     if ($diag[0] == 2012 && $csv->eof) {
 	my @coll = sort { $a <=> $b } keys %cols;
@@ -95,6 +102,17 @@ sub stats
     my $r = shift;
     $cols{scalar @$r}++;
     grep { $_ & 0x0002 } $csv->meta_info and $bin = 1;
+    if ($opt_u) {
+	my @r = @$r;
+	foreach my $x (0 .. $#r) {
+	    local $SIG{__WARN__} = sub {
+		(my $msg = shift) =~ s{ at /\S+Encode.pm.*}{};
+		printf STDERR "Field %3d:%3d - '%s'\t- %s",
+		    $rows, $x, DPeek ($r[$x]), $msg;
+		};
+	    my $oct = decode ("utf-8", $r[$x], Encode::FB_WARN);
+	    }
+	}
     } # stats
 
 if ($firstline) {
